// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium has-error"
  >
    <label
      class="aje-label"
      for="combo-3203043081081503"
    >
      Text Label
    </label>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <div
      class="aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="combo-8480847626628883"
        class="aje-combobox__input is-searchable"
        id="combo-2090163056255192"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="combo-8480847626628883"
          aria-describedby="combo-1389913685417936"
          aria-labelledby="combo-3203043081081503"
          id="combo-972457727978134"
          type="text"
          value="content"
        />
      </div>
      <ul
        aria-labelledby="combo-3203043081081503"
        class="aje-combobox__menu"
        id="combo-8480847626628883"
        role="listbox"
      />
    </div>
    <p
      class="aje-label--error"
      id="combo-1389913685417936"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium has-error"
  >
    <div
      class="aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="combo-8480847626628883"
        class="aje-combobox__input is-searchable"
        id="combo-2090163056255192"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="combo-8480847626628883"
          aria-describedby="combo-1389913685417936"
          aria-labelledby="combo-3203043081081503"
          id="combo-972457727978134"
          type="text"
          value="content"
        />
      </div>
      <ul
        aria-labelledby="combo-3203043081081503"
        class="aje-combobox__menu"
        id="combo-8480847626628883"
        role="listbox"
      />
      <label
        class="aje-label"
        for="combo-3203043081081503"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="combo-1389913685417936"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
